[package]
name = "cargo-clean-all"
version = "0.5.0"
authors = ["Daniel M <danielm-github@dnml.de>"]
license = "MIT"
repository = "https://github.com/dnlmlr/cargo-clean-all"
homepage = "https://github.com/dnlmlr/cargo-clean-all"
readme = "README.md"
description = "Recursively clean all cargo projects in a given directory that match the specified criteria"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cargo-plugins", "cargo-clean", "cargo", "clean", "recursive"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
bytefmt = "0.1.7"
clap = { version = "4.0.19", features = ["derive"] }
crossbeam-channel = "0.5.6"
num_cpus = "1.14.0"
remove_dir_all = "0.7.0"
dialoguer = "0.10.2"
colored = "2.0.0"
indicatif = "0.17.1"
ctrlc = "3.2.3"
