[package]
name = "cargo-clean-all"
version = "0.6.0"
authors = ["Daniel M <danielm-github@dnml.de>"]
license = "MIT"
repository = "https://github.com/dnlmlr/cargo-clean-all"
homepage = "https://github.com/dnlmlr/cargo-clean-all"
readme = "README.md"
description = "Recursively clean all cargo projects in a given directory that match the specified criteria"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cargo-plugins", "cargo-clean", "cargo", "clean", "recursive"]
edition = "2021"

[dependencies]
chrono = "0.4.24"
bytefmt = "0.1.7"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam-channel = "0.5.8"
num_cpus = "1.15.0"
remove_dir_all = { version = "0.8.2", features = ["parallel"] }
dialoguer = "0.10.4"
colored = "2.0.0"
indicatif = "0.17.3"
ctrlc = "3.2.5"
is_executable = "1.0.1"
