[package]
name = "cargo-clean-all"
version = "0.6.3"
authors = ["Daniel M <danielm-github@dnml.de>"]
license = "MIT"
repository = "https://github.com/dnlmlr/cargo-clean-all"
homepage = "https://github.com/dnlmlr/cargo-clean-all"
readme = "README.md"
description = "Recursively clean all cargo projects in a given directory that match the specified criteria"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cargo-plugins", "cargo-clean", "cargo", "clean", "recursive"]
edition = "2021"

[dependencies]
chrono = "0.4.40"
bytefmt = "0.1.7"
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-channel = "0.5.14"
num_cpus = "1.16.0"
remove_dir_all = { version = "1.0.0", features = ["parallel"] }
dialoguer = "0.11.0"
colored = "3.0.0"
indicatif = "0.17.11"
ctrlc = "3.4.5"
is_executable = "1.0.4"
